--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
         <link href="css/all.min.css" rel="stylesheet"/>
         <link href="css/style.css" rel="stylesheet"/>
 
-        <title>Error 404 - Citlali Magazine CSS Template</title>
+        <title>Error 404 - Naama Safai</title>
     </head>
     <body>
 
@@ -130,14 +130,13 @@
                 <div id="cover" class="container py-6">
                     <div class="row d-flex align-items-center">
                         <div id="site-title" class="col-12 col-md-6 col-lg-4">
-                            <h1><a href="./">Citlali Magazine</a></h1>
-                            <p class="description">An awesome free template</p>
+                            <p class="description">Join us for an exhilarating quad bike safari experience</p>
                         </div>
                         <div id="cover-img" class="col-12 col-md-6 col-lg-8 text-center text-sm-end mw-100">
                             <!-- Header ads -->
                             <div class="widget">
                                 <div class="widget-content">
-                                    <img src="./img/728.png" alt="728x150" style="border-radius: 5px;"/>
+                                    <img src="./img/naama_safari-removebg-preview.png" alt="728x150" style="border-radius: 5px;"/>
                                 </div>
                             </div>
                             <!-- /Header ads -->
