--- a/tag.html
+++ b/tag.html
@@ -10,7 +10,7 @@
         <link href="css/all.min.css" rel="stylesheet"/>
         <link href="css/style.css" rel="stylesheet"/>
 
-        <title>Naama Safary</title>
+        <title>Tag - Naama Safai</title>
     </head>
     <body>
 
@@ -39,7 +39,7 @@
                         <nav class="navbar navbar-light navbar-expand-md" data-bs-theme="light">
                             <div class="container-fluid g-0">
                                 <a class="navbar-brand" href="./">
-                                    <img src="./img/safari.png" alt="Citlali Magazine"/>
+                                    <img src="./img/naama_safari-removebg-preview.png" alt="Citlali Magazine"/>
                                 </a>
                                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                                     <span class="navbar-toggler-icon"></span>
@@ -130,15 +130,13 @@
                 <div id="cover" class="container py-6">
                     <div class="row d-flex align-items-center">
                         <div id="site-title" class="col-12 col-md-6 col-lg-4">
-                            <h1><a href="./">Naama Safary</a></h1>
-                            <p class="description">
-                            </p>
+                            <p class="description">Join us for an exhilarating quad bike safari experience</p>
                         </div>
                         <div id="cover-img" class="col-12 col-md-6 col-lg-8 text-center text-sm-end mw-100">
                             <!-- Header ads -->
                             <div class="widget">
                                 <div class="widget-content">
-                                    <img src="./img/Naama Group Full Identity_230927_143655.jpg" alt="728x150" style="border-radius: 5px;"/>
+                                    <img src="./img/728.png" alt="728x150" style="border-radius: 5px;"/>
                                 </div>
                             </div>
                             <!-- /Header ads -->
