--- a/index.html
+++ b/index.html
@@ -531,17 +531,17 @@
                                 </h3>
                                 <div class="widget-content individual">
                                     <a href="#" rel="nofollow">
-                                        <img alt="My photo" class="profile-img rounded-circle border border-secondary" src="./img/guapa.jpg" width="113" height="113">
+                                        <img alt="My photo" class="profile-img rounded-circle border border-secondary" src="./img/naama jpg.jpg" width="113" height="113">
                                     </a>
                                     <div class="profile-info">
                                         <dl class="profile-datablock">
                                             <dt class="profile-data">
                                             <a class="profile-link g-profile" href="#" rel="author nofollow">
-                                                BTemplates
+                                                Naama Safari
                                             </a>
                                             </dt>
                                             <dd class="profile-textblock">
-                                            Hi! We are BTemplates, the best place to get a Blogger template for your blog.
+                                            Hi! Join us for an exhilarating quad bike safari experience
                                             </dd>
                                         </dl>
                                         <a class="profile-link" href="#" rel="author nofollow">
@@ -595,16 +595,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="widget links-list">
-                                <h2>Blogroll</h2>
-                                <div class="widget-content">
-                                    <ul>
-                                        <li><a href="https://openthemes.com">Open Themes</a></li>
-                                        <li><a href="https://blogandweb.com">Blog and Web</a></li>
-                                        <li><a href="https://btemplates.com">Blogger Templates</a></li>
-                                    </ul>
-                                </div>
-                            </div>
+                   
 
                             <div class="widget BlogSearch" data-version="2" id="BlogSearch1">
                                 <h3 class="title">
@@ -613,7 +604,7 @@
                                 <div class="widget-content" role="search">
                                     <form action="/search" class="search-form">
                                         <div class="input-group mb-3" target="_top">
-                                            <input aria-describedby="button-addon2" aria-label="Search this blog" autocomplete="off" class="form-control" name="q" placeholder="Search this blog" type="text" value="">
+                                            <input aria-describedby="button-addon2" aria-label="Search this blog" autocomplete="off" class="form-control" name="q" placeholder="Search" type="text" value="">
                                             <div class="input-group-append">
                                                 <button class="btn btn-primary" id="button-addon2"><i aria-hidden="true" class="fa fa-search"></i></button>
                                             </div>
@@ -626,34 +617,7 @@
 
                         <div class="col-12 col-sm-6 col-lg-4">
                             <div class="widget">
-                                <h2>Latest comments</h2>
-                                <div class="widget-content">
-                                    <a href="#" class="lt-comment">
-                                        <div class="lt-comment-avatar">
-                                            <svg class="border-light rounded-circle bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="50" height="50" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: First slide"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#555" dy=".3em">Ava</text></svg>
-                                        </div>
-                                        <div class="lt-comment-content">
-                                            <span class="lt-comment-author">Francisco:</span> Ea eam labores imperdiet, apeirian democritum ei nam, doming neglegentur ad vis.
-                                        </div>
-                                    </a>
-                                    <a href="#" class="lt-comment">
-                                        <div class="lt-comment-avatar">
-                                            <svg class="border-light rounded-circle bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="50" height="50" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: First slide"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#555" dy=".3em">Ava</text></svg>
-                                        </div>
-                                        <div class="lt-comment-content">
-                                            <span class="lt-comment-author">OpenThemes:</span> Democritum ei nam, doming neglegentur ad vis.
-                                        </div>
-                                    </a>
-                                    <a href="#" class="lt-comment">
-                                        <div class="lt-comment-avatar">
-                                            <svg class="border-light rounded-circle bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="50" height="50" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: First slide"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#555" dy=".3em">Ava</text></svg>
-                                        </div>
-                                        <div class="lt-comment-content">
-                                            <span class="lt-comment-author">Francisco:</span> Yep.
-                                        </div>
-                                    </a>
-                                </div>
-                            </div>
+                           
 
                             <div class="widget Label" data-version="2" id="Label86">
                                 <h3 class="title">
@@ -705,7 +669,7 @@
                         <span>&copy; <i id="this-year">2020</i>. <a href="#">MySite.com</a></span>
                     </div>
                     <div class="col-12 col-md-7 text-md-end" id="please-dont-change">
-                        <p><span class="heart"><i class="fa fa-heart" aria-hidden="true"></i></span> Designed by <a href="https://openthemes.com/">OpenThemes</a>.</p>
+                        <p><span class="heart"><i class="fa fa-heart" aria-hidden="true"></i></span> POWERED by <a href="https://elite-link-card.github.io/shoma/">ELITE.</a>.</p>
                     </div>
                 </div>
             </div>
