--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
-<!doctype html>
-<html lang="en">
-    <head>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Naama Safari</title>
+  <link rel="icon" type="image/x-icon" href="./img/naama jpg.jpg">
+
+
+
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
