--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
                         <span>&copy; <i id="this-year">2020</i>. <a href="#">MySite.com</a></span>
                     </div>
                     <div class="col-12 col-md-7 text-md-end" id="please-dont-change">
-                        <p><span class="heart"><i class="fa fa-heart" aria-hidden="true"></i></span> POWERED by <a href="https://elite-link-card.github.io/shoma/">ELITE.</a>.</p>
+                        <p><span class="heart"><i class="fa fa-heart" aria-hidden="true"></i></span> POWERED by <a href="https://elite-link-card.github.io/elite/">ELITE.</a>.</p>
                     </div>
                 </div>
             </div>
