--- a/single.html
+++ b/single.html
@@ -762,8 +762,24 @@
                                 </div>
                                 <div class="mb-3">
                                     <label for="user-commenntent">Tour Name</label>
-                                    <input typeof="text" id="user-url" class="form-control" name="Tour Name" value="Double Sand Buggy ( 2 seats)">
+                                    <input typeof="text" id="user-url" class="form-control" name="Tour Name" value="Double Sand Buggy ( 2 seats )">
                                 </div>
+                                <div class="mb-3">
+                                    <label for="country-prefix">Tour Time *</label> 
+
+                                <select name="country" class="form-control" id="country">
+                                    <option value="0" label="Select a Tour Time ... " selected="selected">Select a Tour Time ... </option>
+                                        <option value="DZ" label="Monday15:00 – 20:00">Monday  15:00 – 20:00</option>
+                                        <option value="AO" label="Tuesday           15:00 – 20:00">Tuesday           15:00 – 20:00</option>
+                                        <option value="BJ" label="Wednesday     15:00 – 20:00">Wednesday     15:00 – 20:00</option>
+                                        <option value="BJ" label="Thursday        15:00 – 20:00">Thursday        15:00 – 20:00</option>
+                                        <option value="BJ" label="Friday              15:00 – 20:00">Friday              15:00 – 20:00</option>
+                                        <option value="BJ" label="Saturday          15:00 – 20:00">Saturday          15:00 – 20:00</option>
+                                        <option value="BJ" label="Sunday          15:00 – 20:00">Sunday          15:00 – 20:00</option>
+                                    </optgroup>
+                                </select>
+                                    </div>
+
                                 <button type="submit" class="btn btn-outline-info mb-2">Submit</button>
                             </form>
                         </div>
