--- a/index.html
+++ b/index.html
@@ -117,6 +117,8 @@
                         <div id="btemplates-social" class="d-none d-md-block">
                             <ul class="nav">
                                 <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/naamasafari/"><i class="fab fa-instagram"></i></a></li>
+
+                                <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/naamasafari/"><i class="fab fa-instagram"></i></a></li>
                                 <li class="nav-item">
                                     <a class='nav-link' data-bs-target='#searchModal' data-bs-toggle='modal' href='#' id="btemplates-search-icon">
                                         <i aria-hidden='true' class='fa fa-search'></i>
