--- a/Double Sand Buggy ( 2 seats).html
+++ b/Double Sand Buggy ( 2 seats).html
@@ -812,14 +812,13 @@
                                         </div>
                                         <div class="related-post col-6 col-sm-4">
                                             <div class="related-post-thumb">
-                                                <a href="./single.html">
-                                                    <img src="./img/hilda-moraa-africa-entrepeneur-250.jpeg">
+                                                <a href="./Desert Experience 5 in 1 (VIP) Single Quad.html">
+                                                    <img src="./naama 2/gggg.jpg">
                                                 </a>
                                             </div>
-                                            <div class="related-post-info">Tech, Women
+                                            <div class="related-post-info">Desert Experience 5 in 1 (VIP) Single Quad
                                             </div>
                                             <div class="related-post-title">
-                                                <a href="./single.html">African women in tech
                                                 </a>
                                             </div>
                                         </div>
