--- a/Desert Experience 5 in 1 (VIP) Single Quad.html
+++ b/Desert Experience 5 in 1 (VIP) Single Quad.html
@@ -74,6 +74,8 @@
                                                     </ul>
                                                 </li>
                                             </ul>
+                                            
+                                            
                                         </li>
                                         <li class="nav-item dropdown">
                                             <button class="btn btn-link nav-link py-2 px-0 px-lg-2 dropdown-toggle d-flex align-items-center" id="bd-theme" type="button" aria-expanded="false" data-bs-toggle="dropdown" data-bs-display="static">
@@ -149,6 +151,8 @@
         <!-- /Header -->
 
         <!-- Main -->
+        <a href="tel:" id="callnowbutton2"><span></span></a>
+        <a href="tel:" id="callnowbutton"><span></span></a>
         <div id="main" class="container-fluid g-0 d-flex justify-content-center">
             <div class="container">
                 <div class="post hentry row g-0 justify-content-center">
